Squashed commit of the following:
commit ed7e2135f57fda70e807638f7a1f7e7dac36a536
Author: DamianEdwards <damian@damianedwards.com>
Date:   Thu Sep 9 15:21:11 2021 -0700

    More tweaks

commit 9f68dd70d3bb98ee0c7a2e656dc8c2d64617a767
Author: DamianEdwards <damian@damianedwards.com>
Date:   Thu Sep 9 13:07:01 2021 -0700

    Reorganize some code

commit 1962ed3a7de483d4639e28c309224639cee4bdda
Author: DamianEdwards <damian@damianedwards.com>
Date:   Thu Sep 9 10:04:33 2021 -0700

    Tweaks

    - Ordering of modifiers
    - just let EnsureSufficientExecutionStack throw

commit 51b933459611323b969b0740abffc06745c8a87f
Author: DamianEdwards <damian@damianedwards.com>
Date:   Wed Sep 8 22:37:43 2021 -0700

    Fixed final issue, all tests passing

commit 68290a1a05a961e9f5dc1c3cbbd358392d3f074f
Author: DamianEdwards <damian@damianedwards.com>
Date:   Wed Sep 8 22:30:12 2021 -0700

    Big changes

    - Effectively a rewrite as part of supporting enumerables directly
    - Validating per property now based on initial walk of type hierarchy (similar to MVC's model validation approach)
    - Bunch more tests
    - One test still failing due to known issue (see BUG commet)

commit 09ea83cad7de2ab64c7c0cecb6c920fd490172b6
Author: Damian Edwards <damian@damianedwards.com>
Date:   Thu Aug 19 13:37:20 2021 -0700

    WIP on IEnumerable support

--- a/src/MinimalValidation/MinimalValidation.csproj
+++ b/src/MinimalValidation/MinimalValidation.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Description>A minimal validation library built atop the existing features in .NET's `System.ComponentModel.DataAnnotations` namespace.</Description>
     <Authors>Damian Edwards</Authors>
-    <VersionPrefix>0.1.0</VersionPrefix>
+    <VersionPrefix>0.2.0</VersionPrefix>
     <VersionSuffix Condition="'$(BuildNumber)' == ''">pre</VersionSuffix>
     <VersionSuffix Condition="'$(BuildNumber)' != ''">pre-$(BuildNumber)</VersionSuffix>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0</TargetFrameworks>
     <Copyright>Copyright © Damian Edwards</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/DamianEdwards/MinimalValidation</PackageProjectUrl>
