Attempt to get CD to GitHub packages working

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET Build/Test/Pack
 
 on:
   push:
@@ -13,13 +13,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.100-rc.1.21430.44
+
     - name: Restore dependencies
       run: dotnet restore
+
+    - name: Set current date as env variable
+      run: echo "TODAY=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+    - name: Create build number
+      run: echo "BUILD_NUMBER=$TODAY.$GITHUB_RUN_ID.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --configuration Release --no-restore /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA
+
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --verbosity normal
+
+    - name: Pack
+      run: dotnet pack --configuration Release --no-restore --include-symbols --output finalpackage --verbosity d /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA
+
+    - name: Publish artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: nupkg
+        path: finalpackage
