--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,10 +10,13 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  DOTNET_SDK_VERSION: 6.0.100-rc.1.21430.44
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    name: Build, test, and pack
 
     steps:
     - uses: actions/checkout@v2
@@ -21,7 +24,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.100-rc.1.21430.44
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
     - name: Restore dependencies
       run: dotnet restore
@@ -46,3 +49,25 @@ jobs:
       with:
         name: nupkg
         path: finalpackage
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    name: Deploy to repo packages feed
+
+    steps:
+      - name: Download package artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: nupkg
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+
+      - name: Add GitHub Package Repository source
+        run: dotnet nuget add source --username ${{ secrets.GPR_USERNAME }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name GPR ${{ secrets.GPR_URI }}
+
+      - name: Push to GitHub Packages
+        run: dotnet nuget push **/*.nupkg -s "GPR" --skip-duplicate
