Update workflow to delete old CI packages

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -71,3 +71,15 @@ jobs:
 
       - name: Push to GitHub Packages
         run: dotnet nuget push **/*.nupkg -s "GPR" --skip-duplicate
+
+  clean:
+    needs: deploy
+    runs-on: ubuntu-latest
+    name: Delete old packages on repo feed
+
+    steps:
+      - name: Delete old packages
+        uses: smartsquaregmbh/delete-old-packages@v0.3.1
+        with:
+          keep: 5
+          names: MinimalValidation
