--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,7 +42,7 @@ jobs:
       run: dotnet test --verbosity normal
 
     - name: Pack
-      run: dotnet pack $GITHUB_WORKSPACE/src/MinimalValidation/MinimalValidation.csproj --configuration Release --output finalpackage --verbosity d /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA /p:ContinuousIntegrationBuild=true
+      run: dotnet pack --configuration Release --output finalpackage --verbosity d /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA /p:ContinuousIntegrationBuild=true
 
     - name: Publish artifact
       uses: actions/upload-artifact@master
