--- a/samples/Samples.Web/Samples.Web.csproj
+++ b/samples/Samples.Web/Samples.Web.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\MinimalValidation\MinimalValidation.csproj" />
+    <ProjectReference Include="..\..\src\MinimalValidation.AspNetCore\MinimalValidation.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
