--- a/src/MinimalValidation.AspNetCore/MinimalValidation.AspNetCore.csproj
+++ b/src/MinimalValidation.AspNetCore/MinimalValidation.AspNetCore.csproj
@@ -26,5 +26,9 @@
   <ItemGroup>
     <ProjectReference Include="..\MinimalValidation\MinimalValidation.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
+  </ItemGroup>
   
 </Project>
