More changes for AspNetCore package
- Use Directory.Build.props to manage which projects are packable
- Ensure Validated<T> throws BadHttpRequestException when encountering invalid JSON
- Refactor some tests

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,10 +42,7 @@ jobs:
       run: dotnet test --verbosity normal
 
     - name: Pack
-      run: dotnet pack $GITHUB_WORKSPACE/src/MinimalValidation/MinimalValidation.csproj --configuration Release --output finalpackage --verbosity d /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA /p:ContinuousIntegrationBuild=true
-
-    - name: Pack AspNetCore
-      run: dotnet pack $GITHUB_WORKSPACE/src/MinimalValidation.AspNetCore/MinimalValidation.AspNetCore.csproj --configuration Release --output finalpackage --verbosity d /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA /p:ContinuousIntegrationBuild=true
+      run: dotnet pack --no-build --configuration Release --output finalpackage --verbosity d /p:BuildNumber=$BUILD_NUMBER /p:SourceRevisionId=$GITHUB_SHA /p:ContinuousIntegrationBuild=true
 
     - name: Publish artifact
       uses: actions/upload-artifact@master
