Rename to MiniValidation (#12)
#11

--- a/samples/Samples.Console/Samples.Console.csproj
+++ b/samples/Samples.Console/Samples.Console.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\MinimalValidation\MinimalValidation.csproj" />
+    <ProjectReference Include="..\..\src\MiniValidation\MiniValidation.csproj" />
   </ItemGroup>
 
 </Project>
