--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -82,4 +82,8 @@ jobs:
         uses: smartsquaregmbh/delete-old-packages@v0.3.1
         with:
           keep: 5
-          names: MinimalValidation
+          names: |
+            MiniValidation
+            MiniValidation.AspNetCore
+            MinimalValidation
+            MinimalValidation.AspNetCore
