--- a/tests/MiniValidation.AspNetCore.Tests/MiniValidation.AspNetCore.Tests.csproj
+++ b/tests/MiniValidation.AspNetCore.Tests/MiniValidation.AspNetCore.Tests.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <Using Include="System.ComponentModel.DataAnnotations" />
     <Using Include="Xunit" />
-    <ProjectReference Include="..\..\src\MinimalValidation.AspNetCore\MinimalValidation.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\src\MiniValidation.AspNetCore\MiniValidation.AspNetCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
