Use framework default binding for Validated<T>
- Updated to later rc.1 build
- Refactored the binding logic for Validated<T> to use the framework's default binding so that if T has BindAsync defined it will be used
- Moved common properties into src/Directory.Build.Props
- Skipped tests failing due to issue fixed in rc.2
- Added test
- Renamed solution
- Added solution items

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,7 +1,19 @@
 <Project>
 
   <PropertyGroup>
+    <VersionPrefix>0.2.0</VersionPrefix>
+    <VersionSuffix Condition="'$(BuildNumber)' == ''">pre</VersionSuffix>
+    <VersionSuffix Condition="'$(BuildNumber)' != ''">pre.$(BuildNumber)</VersionSuffix>
+    <Authors>Damian Edwards</Authors>
+    <Copyright>Copyright © Damian Edwards</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/DamianEdwards/MiniValidation</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/DamianEdwards/MiniValidation</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IsPackable>true</IsPackable>
+    <DebugType>embedded</DebugType>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
