Squashed commit of the following:
commit b4323b6d1862e0ea14273e1e84848b532cacd254
Author: DamianEdwards <damian@damianedwards.com>
Date:   Mon Sep 27 11:45:05 2021 -0700

    Bunch of updates (0.3.0)

    - Bump to version 0.3.0
    - Change naming, types are in MiniValidation namespace now, the main type changes from MiniValidation to MiniValidator
    - Deleted IValidated as default interface implementations are only available via the interface type so it's cumbersome to use
    - Reduce allocations:
      - Reuse ValidationContext when validating property values on the same object
      - Reuse ValidationResults collection and clear after each validation operation
    - Handle case in ASP.NET Core when default binding logic detects an error during binding (e.g. bad JSON) and add an error to the result

commit 11143addc29792eb27ecd3824246917f373da529
Author: Damian Edwards <damian@damianedwards.com>
Date:   Sun Sep 26 22:24:07 2021 -0700

    Add IValidated interface binder

    - Works like Validated<T> except instead of wrapping the target type it's default implemented on the target type

--- a/tests/MiniValidation.UnitTests/MiniValidation.UnitTests.csproj
+++ b/tests/MiniValidation.UnitTests/MiniValidation.UnitTests.csproj
@@ -4,12 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <DefaultNamespace>MiniValidationUnitTests</DefaultNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <Using Include="System.ComponentModel.DataAnnotations" />
     <Using Include="Xunit" />
+    <Using Include="MiniValidation" />
     <ProjectReference Include="..\..\src\MiniValidation\MiniValidation.csproj" />
   </ItemGroup>
 
