--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -10,6 +10,11 @@ on:
 
   workflow_dispatch:
 
+env:
+  DOTNET_SDK_SIX_VERSION: 6.0.x
+  DOTNET_SDK_FIVE_VERSION: 5.0.x
+  DOTNET_SDK_THREE_VERSION: 3.1.x
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,8 +23,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup .NET SDK
+    - name: Setup .NET SDK ${{ env.DOTNET_SDK_SIX_VERSION }}
       uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: ${{ env.DOTNET_SDK_SIX_VERSION }}
+
+    - name: Setup .NET SDK ${{ env.DOTNET_SDK_FIVE_VERSION }}
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: ${{ env.DOTNET_SDK_FIVE_VERSION }}
+
+    - name: Setup .NET SDK ${{ env.DOTNET_SDK_THREE_VERSION }}
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: ${{ env.DOTNET_SDK_THREE_VERSION }}
 
     - name: Restore dependencies
       run: dotnet restore
