--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,9 @@ on:
     branches: [ main ]
 
 env:
-  DOTNET_SDK_VERSION: 6.0.100
+  DOTNET_SDK_SIX_VERSION: 6.0.x
+  DOTNET_SDK_FIVE_VERSION: 5.0.x
+  DOTNET_SDK_THREE_VERSION: 3.1.x
 
 jobs:
   build:
@@ -21,10 +23,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup .NET SDK ${{ env.DOTNET_SDK_VERSION }}
+    - name: Setup .NET SDK ${{ env.DOTNET_SDK_SIX_VERSION }}
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: ${{ env.DOTNET_SDK_VERSION }}
+          dotnet-version: ${{ env.DOTNET_SDK_SIX_VERSION }}
+
+    - name: Setup .NET SDK ${{ env.DOTNET_SDK_FIVE_VERSION }}
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: ${{ env.DOTNET_SDK_FIVE_VERSION }}
+
+    - name: Setup .NET SDK ${{ env.DOTNET_SDK_THREE_VERSION }}
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: ${{ env.DOTNET_SDK_THREE_VERSION }}
 
     - name: Restore dependencies
       run: dotnet restore
@@ -61,10 +73,20 @@ jobs:
         with:
           name: nupkg
 
-      - name: Setup .NET SDK ${{ env.DOTNET_SDK_VERSION }}
+      - name: Setup .NET SDK ${{ env.DOTNET_SDK_SIX_VERSION }}
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: ${{ env.DOTNET_SDK_VERSION }}
+          dotnet-version: ${{ env.DOTNET_SDK_SIX_VERSION }}
+
+      - name: Setup .NET SDK ${{ env.DOTNET_SDK_FIVE_VERSION }}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_SDK_FIVE_VERSION }}
+
+      - name: Setup .NET SDK ${{ env.DOTNET_SDK_THREE_VERSION }}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_SDK_THREE_VERSION }}
 
       - name: Add GitHub Package Repository source
         run: dotnet nuget add source --username ${{ secrets.GPR_USERNAME }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name GPR ${{ secrets.GPR_URI }}
