--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -1,7 +1,12 @@
-name: .NET Build/Test all branches/PRs
+name: CI (non-main & PRs)
 
 on:
   push:
+    branches:
+      - '*'         # matches every branch that doesn't contain a '/'
+      - '*/*'       # matches every branch containing a single '/'
+      - '**'        # matches every branch
+      - '!main'     # excludes main
   pull_request:
     paths-ignore:
     - '**/*.md'
