Lots of fixes and improvements (#41)
* Updates for 7.0
* Updated referenced package versions
* Update to match MVC recursive validation behavior

Ensure name from DisplayAttribute is used in error messages.
Fixes #25

* Added support for attributes on record ctor parameters
* Update GitHub actions for .NET 7.0

* Initial implementation of async validation
* More work on async validation paths
* Added BDN benchmarks
* Handle polymorphic async validation
* Fix issue to allow sync-over-async in declared graph when opted in
* Attempt at updating actions to produce candidate ship packages
* Drop netcoreapp3.1 support

--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -17,7 +17,6 @@ on:
 
 env:
   DOTNET_SDK_SIX_VERSION: 6.0.x
-  DOTNET_SDK_FIVE_VERSION: 5.0.x
   DOTNET_SDK_THREE_VERSION: 3.1.x
 
 jobs:
@@ -28,15 +27,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup .NET SDK (global.json version)
+      uses: actions/setup-dotnet@v1
+
     - name: Setup .NET SDK ${{ env.DOTNET_SDK_SIX_VERSION }}
       uses: actions/setup-dotnet@v1
       with:
           dotnet-version: ${{ env.DOTNET_SDK_SIX_VERSION }}
-
-    - name: Setup .NET SDK ${{ env.DOTNET_SDK_FIVE_VERSION }}
-      uses: actions/setup-dotnet@v1
-      with:
-          dotnet-version: ${{ env.DOTNET_SDK_FIVE_VERSION }}
 
     - name: Setup .NET SDK ${{ env.DOTNET_SDK_THREE_VERSION }}
       uses: actions/setup-dotnet@v1
