--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project>
 
   <PropertyGroup>
-    <VersionPrefix>0.6.0</VersionPrefix>
-    <VersionSuffix Condition="'$(BuildNumber)' == ''">pre</VersionSuffix>
-    <VersionSuffix Condition="'$(BuildNumber)' != ''">pre.$(BuildNumber)</VersionSuffix>
+    <VersionPrefix>0.7.0</VersionPrefix>
+    <VersionSuffix>dev</VersionSuffix>
+    <VersionSuffix Condition="'$(VersionSuffix)' != '' and '$(BuildNumber)' != ''">$(VersionSuffix).$(BuildNumber)</VersionSuffix>
     <Authors>Damian Edwards</Authors>
     <Copyright>Copyright © Damian Edwards</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
