--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,7 +44,7 @@ jobs:
       run: dotnet test --verbosity normal
 
     - name: Pack (ci)
-      run: dotnet pack --configuration Release --output artifacts/ci --verbosity d -p:VersionSuffix="ci" -p:BuildNumber=$BUILD_NUMBER -p:SourceRevisionId=$GITHUB_SHA -p:ContinuousIntegrationBuild=true
+      run: dotnet pack --configuration Release --output artifacts/ci --verbosity d -p:VersionSuffix="ci.$BUILD_NUMBER" -p:BuildNumber=$BUILD_NUMBER -p:SourceRevisionId=$GITHUB_SHA -p:ContinuousIntegrationBuild=true
 
     - name: Pack (ship candidate)
       run: dotnet pack --configuration Release --output artifacts/ship --verbosity d -p:VersionSuffix="" -p:BuildNumber=$BUILD_NUMBER -p:SourceRevisionId=$GITHUB_SHA -p:ContinuousIntegrationBuild=true
