--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build package & sample site
+    name: Build & Test
 
     steps:
     - uses: actions/checkout@v2
