Update workflow actions versions

--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build & Test
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Install .NET SDK
       uses: actions/setup-dotnet@v3
@@ -28,7 +28,9 @@ jobs:
     - name: Create build number
       run: |
         now=$(date +'%Y%m%d')
-        echo "BUILD_NUMBER=$now.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+        buildNumber=$now.$GITHUB_RUN_NUMBER
+        echo "BUILD_NUMBER=$buildNumber" >> $GITHUB_ENV
+        echo "$buildNumber"
 
     - name: Build
       run: dotnet build --configuration Release --no-restore -p:BuildNumber=$BUILD_NUMBER -p:SourceRevisionId=$GITHUB_SHA -p:ContinuousIntegrationBuild=true
