Support runtime property attributes via TypeDescriptor (#53)
* Support runtime property attributes via TypeDescriptor
* Support nullable annotations in .NET Standard 2.0
* Refactor AttachAttribute to an extension method
* Property name check should check for exact match
* Bump version to 0.9.0
* Ensure validation attributes are still only considered once

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,6 +3,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="PolySharp" Version="1.13.2" />
     <PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.4.0" />
