--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -55,7 +55,7 @@ jobs:
       run: dotnet pack --configuration Release --output ./artifacts/ship --verbosity normal -p:BuildNumber=$BUILD_NUMBER -p:SourceRevisionId=$GITHUB_SHA -p:ContinuousIntegrationBuild=true -p:IsShipCandidate=true
 
     - name: Upload artifacts (packages)
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v4
       with:
         name: nupkg
         path: ./artifacts/**/*.nupkg
